kubernetes/AKS-Deploy-Manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production

---

# apiVersion: v1
# kind: Namespace
# metadata:
#   name: staging
