kubernetes/AKS-Deploy-Manifests/frontend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-frontend-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
      tier: frontend
  template:
    metadata:
      labels:
        app: chat-app
        tier: frontend
    spec:
      containers:
      - name: chat-app-frontend
        image: noscopev6/chatapp-f:v3.1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: chat-app-frontend-service
  namespace: production
  labels:
    app: chat-app
spec:
  selector:
    app: chat-app
    tier: frontend
  ports:
    - port: 80
      targetPort: 3000  
      protocol: TCP
  type: ClusterIP
