kubernetes/AKS-Deploy-Manifests/mongo-db-sec.yaml


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-chat-prod
  namespace: production
spec:
  serviceName: "mongodb-svc"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-chat-prod
  template:
    metadata:
      labels:
        app: mongodb-chat-prod
    spec:
      containers:
        - name: mongodb-chat-prod
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-chat-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb-chat-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
        storageClassName: ebs-sc

---
# DB Svc
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongodb
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
  clusterIP: None # For StatefulSet
