kubernetes/AKS-Deploy-Manifests/azure-ag-ingress.yaml
# deploy ingress service 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: production
  name: chatapp-ingress-prod
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: azure-application-gateway
  tls:
    - hosts:
        - nginx.ahmadraza.in
        - chat.ahmadraza.in
        - chatapi.ahmadraza.in  # Adding the new hostname for nginx
      secretName: chatapp-secret-tls  # The TLS secret created in the previous steps
  rules:
    - host: chat.ahmadraza.in  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-frontend-service 
                port:
                  number: 80

    - host: chatapi.ahmadraza.in  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-backend-service 
                port:
                  number: 80                
    - http:
        paths:
          - path: /  # Testing with LB IP 
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: nginx.ahmadraza.in  # New rule for nginx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80


## create and store the ssl certificate in secrets 
# kubectl create secret tls chatapp-secret-tls --cert=tls.crt --key=tls.key -n production  # Ensure this matches your namespace
# kubectl describe secret chatapp-secret-tls -n production
# kubectl get secret chatapp-secret-tls -n production -o yaml
# echo "<base64_encoded_certificate>" | base64 --decode
